Closed
Bug 461106
Opened 17 years ago
Closed 16 years ago
Focus lost after closing Tabsposé
Categories
(Camino Graveyard :: Tabbed Browsing, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino2.0
People
(Reporter: phiw2, Assigned: stuart.morgan+bugzilla)
Details
(Whiteboard: [camino-2.0])
Attachments
(1 file)
|
1.14 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR
1. have multiple tabs open (longer pages, links)
2. open Tabsposé
3. close Tabsposé without switching tabs
ER: able to navigate the page with the keyboard (pgDown, spacebar, tab to links, continue typing in this textarea).
AR: nothing happens. Sniff.
10.5.5 with FKA on.
Flags: camino2.0?
| Assignee | ||
Comment 2•16 years ago
|
||
This turned out to be completely separate from implementing a working tab chain.
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #406626 -
Flags: superreview?(mikepinkerton)
| Assignee | ||
Updated•16 years ago
|
Flags: camino2.0? → camino2.0+
Target Milestone: --- → Camino2.0
Comment 3•16 years ago
|
||
Comment on attachment 406626 [details] [diff] [review]
fix
sr=pink
IIRC we have this snippet of code elsewhere as well. Would it be useful to just wrap it into a helper method called something like "-ensureSomethingHasFocus"?
Attachment #406626 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 4•16 years ago
|
||
Landed on CVS trunk and CAMINO_2_0_BRANCH.
The other place we do this is part of more complex conditional logic, so there's no good way to extract this bit.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
| Reporter | ||
Comment 5•16 years ago
|
||
This works fine now, thanks !
However, there is a flip side: if the active tab in the STR is the BM manager (or History), then the focus is completely lost (it sorta worked before the patch: with a bookmark focussed, going in and out of tabsposé would not return the focus to that bookmark, but one tab would put the focus on the left column). Now the focus is nowhere and tabbing just beeps. Putting the focus on e.g. the find bar or the BM search field and tabbing from there works though.
(I don't think I ever tested that scenario before…)
| Assignee | ||
Comment 6•16 years ago
|
||
Sigh; someday I'll fix a bug without regressing something. Please file a new bug for that, since the most common case has been fixed and it'll be easier to track in a new bug.
| Reporter | ||
Comment 7•16 years ago
|
||
Filed bug 522919 for the BM manager issue.
Meanwhile, marking this one as verified.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•