Camino only - Bug 461106: Restore focus to content area when leaving tab overview mode. sr=pink